--- a/leader-board-css.css
+++ b/leader-board-css.css
@@ -6,9 +6,32 @@ body {
     background-color: rgb(227, 226, 226);
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container {
     background-color: rgb(255, 255, 255);
     width: 870px;
+    padding-left: 20px;
+    border-radius: 15px;
+    margin-top: 25px;
+}
+
+hr {
+    border: 1px;
+}
+
+.section-top {
+    color: blue;
+    padding-top: 5px;
+    padding-left: 45px;
+}
+
+.Top-player {
+    font-size: 35px;
 }
 
 .first-list {
@@ -27,10 +50,105 @@ body {
 }
 
 .player img {
-    width: 46px;
-    height: 46px;
+    width: 56px;
+    height: 56px;
+    padding-left: 50px;
+    padding-bottom: 10px;
 }
 
 .player-name {
+    font-size: 18px;
     margin-left: 16px;
+}
+
+/* top-blogs-Style */
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+    padding-left: 48px;
+    padding-bottom: 60px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-detail {
+    margin-top: -10px;
+    margin-left: 16px;
+}
+
+.blog-title {
+    font-size: 18px;
+}
+
+.author {
+    color: gray;
+}
+
+.author a {
+    text-decoration: none;
+    color: blue;
+    font-size: 16px;
+}
+
+/* -----courses Style---- */
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.course {
+    width: 250px;
+}
+
+.course-banner img {
+    width: 224px;
+    height: 104px;
+}
+
+.course-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.filled {
+    color: yellow;
+}
+
+.fa-star.empty {
+    color: rgb(159, 159, 155);
+}
+
+.course-duration {
+    color: rgb(191, 14, 14);
+    background-color: rgb(214, 148, 148);
+    border-radius: 10px;
+}
+
+/* media Queries */
+
+@media only screen and (max-width:688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+
 }
